--- a/books/Base.lproj/Main.storyboard
+++ b/books/Base.lproj/Main.storyboard
@@ -5,10 +5,10 @@
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--Book Details View Controller-->
+        <!--Book Details-->
         <scene sceneID="bgM-Uc-nwx">
             <objects>
-                <viewController id="svF-c1-e4g" customClass="BookDetailsViewController" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="svF-c1-e4g" customClass="BookDetails" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="atZ-hB-IGg"/>
                         <viewControllerLayoutGuide type="bottom" id="yel-qD-x6K"/>
@@ -136,10 +136,10 @@
             </objects>
             <point key="canvasLocation" x="-4997" y="378"/>
         </scene>
-        <!--Book Table View Controller-->
+        <!--Book Table-->
         <scene sceneID="asB-Kd-tZj">
             <objects>
-                <tableViewController definesPresentationContext="YES" id="FON-og-WdI" customClass="BookTableViewController" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController definesPresentationContext="YES" id="FON-og-WdI" customClass="BookTable" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="92" sectionHeaderHeight="28" sectionFooterHeight="28" id="AIa-Vb-4Tr">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
