--- a/books/Base.lproj/AddBook.storyboard
+++ b/books/Base.lproj/AddBook.storyboard
@@ -74,8 +74,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Searching for Books" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sCo-yn-uou">
-                                <rect key="frame" x="20" y="253" width="560" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Searching for Books" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sCo-yn-uou">
+                                <rect key="frame" x="20" y="252.5" width="560" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -102,43 +102,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7gT-5z-qMi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-268" y="-391"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="JL4-eG-7sN">
-            <objects>
-                <viewController id="aHN-eE-wik" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="b1n-O9-NzH"/>
-                        <viewControllerLayoutGuide type="bottom" id="Dqh-7q-dRd"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="rET-Ml-qjo">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello Jeremie" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ws5-E5-L4f">
-                                <rect key="frame" x="20" y="20" width="371" height="37"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bEh-vK-FRM">
-                                <rect key="frame" x="399" y="23" width="51" height="31"/>
-                                <color key="onTintColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            </switch>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="Ws5-E5-L4f" firstAttribute="top" secondItem="b1n-O9-NzH" secondAttribute="bottom" id="0rF-km-50r"/>
-                            <constraint firstItem="bEh-vK-FRM" firstAttribute="leading" secondItem="Ws5-E5-L4f" secondAttribute="trailing" constant="8" id="1Eq-1z-dkV"/>
-                            <constraint firstItem="Ws5-E5-L4f" firstAttribute="leading" secondItem="rET-Ml-qjo" secondAttribute="leadingMargin" id="Glp-HR-XIB"/>
-                            <constraint firstItem="bEh-vK-FRM" firstAttribute="top" secondItem="b1n-O9-NzH" secondAttribute="bottom" constant="3" id="cfb-Xn-C0H"/>
-                            <constraint firstItem="Ws5-E5-L4f" firstAttribute="trailing" secondItem="rET-Ml-qjo" secondAttribute="trailingMargin" constant="-189" id="j6J-ub-vco"/>
-                        </constraints>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="1tA-qR-y1x" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-198" y="336"/>
         </scene>
         <!--Nav With Read State-->
         <scene sceneID="D1O-n3-5lh">
