--- a/books/Base.lproj/Main.storyboard
+++ b/books/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="flR-X9-qpy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="flR-X9-qpy">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -21,23 +21,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="536"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qxc-PW-YFe" userLabel="ContentView">
-                                        <rect key="frame" x="0.0" y="0.0" width="600" height="215"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="259"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k7j-D0-s2o">
-                                                <rect key="frame" x="134" y="48" width="434" height="17"/>
-                                                <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
-                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Book title" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bmm-uv-eym">
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Book title" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bmm-uv-eym">
                                                 <rect key="frame" x="134" y="16" width="434" height="32.5"/>
                                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
-                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sfp-wj-tDM">
-                                                <rect key="frame" x="16" y="181" width="552" height="18"/>
-                                                <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
@@ -48,26 +36,60 @@
                                                     <constraint firstAttribute="height" constant="157" id="aMl-cw-GXP"/>
                                                 </constraints>
                                             </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Subtitle" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hnS-9T-og9">
+                                                <rect key="frame" x="134" y="50" width="434" height="17"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k7j-D0-s2o">
+                                                <rect key="frame" x="134" y="69" width="434" height="17"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Published" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cfS-jr-URE">
+                                                <rect key="frame" x="16" y="181" width="552" height="18"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pages" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zaz-8U-byf">
+                                                <rect key="frame" x="16" y="203" width="552" height="18"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
+                                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sfp-wj-tDM">
+                                                <rect key="frame" x="16" y="225" width="552" height="18"/>
+                                                <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstItem="k7j-D0-s2o" firstAttribute="top" secondItem="Bmm-uv-eym" secondAttribute="bottom" id="3Ja-9G-cKn"/>
-                                            <constraint firstItem="Bmm-uv-eym" firstAttribute="leading" secondItem="HXj-zH-Neb" secondAttribute="trailing" constant="8" id="41L-NC-Jgi"/>
+                                            <constraint firstItem="hnS-9T-og9" firstAttribute="leading" secondItem="Bmm-uv-eym" secondAttribute="leading" id="0WO-bu-5Zu"/>
                                             <constraint firstAttribute="bottomMargin" secondItem="Sfp-wj-tDM" secondAttribute="bottom" constant="8" id="4o2-ya-Gyp"/>
                                             <constraint firstItem="HXj-zH-Neb" firstAttribute="top" secondItem="Qxc-PW-YFe" secondAttribute="topMargin" constant="8" id="5NM-Uu-9fV"/>
-                                            <constraint firstItem="k7j-D0-s2o" firstAttribute="leading" secondItem="Bmm-uv-eym" secondAttribute="leading" id="6Lo-Lg-Xoi"/>
+                                            <constraint firstItem="Zaz-8U-byf" firstAttribute="top" secondItem="cfS-jr-URE" secondAttribute="bottom" constant="4" id="BYV-T0-nu5"/>
+                                            <constraint firstItem="Sfp-wj-tDM" firstAttribute="leading" secondItem="HXj-zH-Neb" secondAttribute="leading" id="DSq-kL-bem"/>
+                                            <constraint firstItem="hnS-9T-og9" firstAttribute="trailing" secondItem="Bmm-uv-eym" secondAttribute="trailing" id="E7A-Ud-oy4"/>
                                             <constraint firstAttribute="trailingMargin" secondItem="Bmm-uv-eym" secondAttribute="trailing" constant="24" id="EZT-Wo-FZK"/>
                                             <constraint firstItem="k7j-D0-s2o" firstAttribute="trailing" secondItem="Bmm-uv-eym" secondAttribute="trailing" id="FMQ-5v-9aV"/>
+                                            <constraint firstItem="hnS-9T-og9" firstAttribute="top" secondItem="Bmm-uv-eym" secondAttribute="bottom" constant="2" id="KgN-MD-RmY"/>
                                             <constraint firstItem="Bmm-uv-eym" firstAttribute="leading" secondItem="HXj-zH-Neb" secondAttribute="trailing" constant="8" id="Lwl-5v-DKj"/>
+                                            <constraint firstItem="cfS-jr-URE" firstAttribute="leading" secondItem="HXj-zH-Neb" secondAttribute="leading" id="SKh-E2-q6m"/>
                                             <constraint firstItem="Sfp-wj-tDM" firstAttribute="trailing" secondItem="Bmm-uv-eym" secondAttribute="trailing" id="UuW-Ln-0MC"/>
+                                            <constraint firstItem="cfS-jr-URE" firstAttribute="trailing" secondItem="Bmm-uv-eym" secondAttribute="trailing" id="X5Z-du-E9L"/>
+                                            <constraint firstItem="Sfp-wj-tDM" firstAttribute="top" secondItem="Zaz-8U-byf" secondAttribute="bottom" constant="4" id="bq6-Ka-Ef2"/>
                                             <constraint firstItem="Bmm-uv-eym" firstAttribute="top" secondItem="HXj-zH-Neb" secondAttribute="top" id="e4J-gM-J1H"/>
                                             <constraint firstItem="k7j-D0-s2o" firstAttribute="leading" secondItem="Bmm-uv-eym" secondAttribute="leading" id="eg1-kU-KW2"/>
-                                            <constraint firstItem="Sfp-wj-tDM" firstAttribute="leading" secondItem="HXj-zH-Neb" secondAttribute="leading" id="iaI-kG-bUj"/>
+                                            <constraint firstItem="cfS-jr-URE" firstAttribute="top" secondItem="HXj-zH-Neb" secondAttribute="bottom" constant="8" id="fcW-bN-rOM"/>
                                             <constraint firstItem="HXj-zH-Neb" firstAttribute="leading" secondItem="Qxc-PW-YFe" secondAttribute="leadingMargin" constant="8" id="jNT-06-oTQ"/>
-                                            <constraint firstItem="k7j-D0-s2o" firstAttribute="top" secondItem="Bmm-uv-eym" secondAttribute="bottom" id="o35-HV-529"/>
-                                            <constraint firstItem="Bmm-uv-eym" firstAttribute="top" secondItem="HXj-zH-Neb" secondAttribute="top" id="p2k-DN-3NP"/>
-                                            <constraint firstItem="Sfp-wj-tDM" firstAttribute="top" secondItem="HXj-zH-Neb" secondAttribute="bottom" constant="8" id="pHr-B8-2Cd"/>
-                                            <constraint firstItem="k7j-D0-s2o" firstAttribute="trailing" secondItem="Bmm-uv-eym" secondAttribute="trailing" id="qdb-U0-kTN"/>
+                                            <constraint firstItem="k7j-D0-s2o" firstAttribute="top" secondItem="hnS-9T-og9" secondAttribute="bottom" constant="2" id="ldl-y3-cp4"/>
+                                            <constraint firstItem="Zaz-8U-byf" firstAttribute="leading" secondItem="HXj-zH-Neb" secondAttribute="leading" id="myL-ay-mKI"/>
+                                            <constraint firstItem="Zaz-8U-byf" firstAttribute="trailing" secondItem="Bmm-uv-eym" secondAttribute="trailing" id="omY-hV-Puo"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -100,6 +122,9 @@
                         <outlet property="authorLabel" destination="k7j-D0-s2o" id="3pU-LR-uQp"/>
                         <outlet property="descriptionLabel" destination="Sfp-wj-tDM" id="6f1-oz-spK"/>
                         <outlet property="imageView" destination="HXj-zH-Neb" id="ZYa-Ki-xdJ"/>
+                        <outlet property="pagesLabel" destination="Zaz-8U-byf" id="PD5-Pv-5rF"/>
+                        <outlet property="publishedWhenLabel" destination="cfS-jr-URE" id="Ljy-bi-41a"/>
+                        <outlet property="subtitleLabel" destination="hnS-9T-og9" id="Bd7-rA-gkl"/>
                         <outlet property="titleLabel" destination="Bmm-uv-eym" id="yeK-Ja-3U8"/>
                     </connections>
                 </viewController>
