--- a/books/Base.lproj/Main.storyboard
+++ b/books/Base.lproj/Main.storyboard
@@ -165,13 +165,13 @@
         <scene sceneID="asB-Kd-tZj">
             <objects>
                 <tableViewController definesPresentationContext="YES" id="FON-og-WdI" customClass="BookTable" customModule="Reading_List" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="92" sectionHeaderHeight="28" sectionFooterHeight="28" id="AIa-Vb-4Tr">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="92" sectionHeaderHeight="18" sectionFooterHeight="18" id="AIa-Vb-4Tr">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="0.0" reuseIdentifier="BookTableViewCell" rowHeight="92" id="IaP-tj-7Wn" customClass="BookTableViewCell" customModule="Reading_List" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="92" width="600" height="92"/>
+                                <rect key="frame" x="0.0" y="113.5" width="600" height="92"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="IaP-tj-7Wn" id="N7c-k9-dzi">
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="91.5"/>
@@ -227,7 +227,6 @@
                             <rect key="frame" x="180" y="7" width="240" height="30"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <segments>
-                                <segment title="Reading"/>
                                 <segment title="To Read"/>
                                 <segment title="Finished"/>
                             </segments>
@@ -283,6 +282,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="4X1-bu-8ma"/>
+        <segue reference="Iwj-ak-QQE"/>
     </inferredMetricsTieBreakers>
 </document>
