--- a/books/Base.lproj/AddBook.storyboard
+++ b/books/Base.lproj/AddBook.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="IA5-Oq-XRy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="IA5-Oq-XRy">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -61,7 +61,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ano-2E-9eJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-991" y="362"/>
+            <point key="canvasLocation" x="-903" y="938"/>
         </scene>
         <!--Search By Isbn-->
         <scene sceneID="eFJ-kC-eB4">
@@ -98,6 +98,7 @@
                     <navigationItem key="navigationItem" id="4hc-nu-uIc"/>
                     <connections>
                         <outlet property="spinner" destination="sSV-6S-uTM" id="wmz-J1-aqx"/>
+                        <segue destination="yLX-6o-qN7" kind="show" identifier="showIsbnSearchResultSegue" id="0cw-gM-G7k"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7gT-5z-qMi" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -130,7 +131,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mJ1-SA-xV9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-246" y="362"/>
+            <point key="canvasLocation" x="-158" y="938"/>
         </scene>
         <!--Nav With Read State-->
         <scene sceneID="D1O-n3-5lh">
@@ -189,4 +190,7 @@
             <point key="canvasLocation" x="-991" y="-391"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="0cw-gM-G7k"/>
+    </inferredMetricsTieBreakers>
 </document>
