--- a/books/Base.lproj/AddBook.storyboard
+++ b/books/Base.lproj/AddBook.storyboard
@@ -61,7 +61,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ano-2E-9eJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-903" y="938"/>
+            <point key="canvasLocation" x="-635" y="382"/>
         </scene>
         <!--Search By Isbn-->
         <scene sceneID="eFJ-kC-eB4">
@@ -98,7 +98,7 @@
                     <navigationItem key="navigationItem" id="4hc-nu-uIc"/>
                     <connections>
                         <outlet property="spinner" destination="sSV-6S-uTM" id="wmz-J1-aqx"/>
-                        <segue destination="yLX-6o-qN7" kind="show" identifier="showIsbnSearchResultSegue" id="0cw-gM-G7k"/>
+                        <segue destination="bN9-Cz-0Ly" kind="show" identifier="showIsbnSearchResultSegue" id="d2h-Hr-BX6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7gT-5z-qMi" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -131,7 +131,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mJ1-SA-xV9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-158" y="938"/>
+            <point key="canvasLocation" x="598" y="-11"/>
         </scene>
         <!--Nav With Read State-->
         <scene sceneID="D1O-n3-5lh">
@@ -191,6 +191,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="0cw-gM-G7k"/>
+        <segue reference="IXB-Is-KKL"/>
     </inferredMetricsTieBreakers>
 </document>
